# CipherChat

./: README.md  package-lock.json  package.json
src/: App.jsx  Auth.jsx  Chat.jsx  ChatComponent.jsx  Connection.jsx  ContactDialog.jsx  ContactDrawer.jsx  Message.jsx  aesDash.jsx  main.jsx  styles.css  util.js
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypt.rs  lib.rs  main.rs  socket.rs  util.rs  x3dh.rs  xxxdh.rs
