[package]
name = "cipher-chat"
version = "0.1.0"
description = "A Tauri App"
authors = ["Nycz"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cipher_chat_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"

#encryption
aes-gcm = "0.10.2"
sha256 = "1.1.4"
base64 = "0.21.2"
#better error handling for tauri
thiserror = "1.0.40"
#chat
futures-util = "0.3.28"
http = "0.2.9"
tokio = { version = "1.28.1", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["rustls-tls-webpki-roots"] }
# tungstenite = { version = "0.13", features = ["native-tls"] }
tokio-stream = { version = "0.1.14", features = ["full"] }
async-trait = "0.1.68"

lazy_static = "1.4.0"

rustls-pemfile = "1.0.3"
tokio-rustls = { version = "0.26.0", default-features = false, features = ["ring"] }

log = "0.4"
pretty_env_logger = "0.5.0"

tauri-plugin-store = "2"

rustls-platform-verifier = "0.3.4"


#x3dh
# xxxdh = "0.7.4"
cryptimitives = "^0.20.0"
cryptraits = "^0.14.1"
rand_core = "0.6.4"
# tauri-plugin-http = "2"

subtle = "2.6.1"
